--- a/public/index.html
+++ b/public/index.html
@@ -268,13 +268,13 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Спасибо за регистрацию!</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">Спасибо!</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
 						<span aria-hidden="true">&times;</span>
 					</button>
                 </div>
                 <div class="modal-body">
-                    Мы пришлем подтверждение на ваш Email.
+                    Мы пришлем подтверждение <br> на ваш email
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
